tests/neg/17211.check
-- [E182] Type Error: tests/neg/17211.scala:14:12 ----------------------------------------------------------------------
14 |  constValue[IsInt[Foo.Foo]] // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  IsInt[Foo.Foo] is not a constant type; cannot take constValue
   |
   |  Note: a match type could not be fully reduced:
   |
   |    trying to reduce  IsInt[Foo.Foo]
   |    failed since selector Foo.Foo
   |    does not match  case Int => (true : Boolean)
   |    and cannot be shown to be disjoint from it either.
   |    Therefore, reduction cannot advance to the remaining case
   |
   |      case _ => (false : Boolean)
